--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -1,8 +1,31 @@
 .gift {
+  display: flex;
+  justify-content: center;
+  position: relative;
   background-color: #68b738d9;
-  background-image: url("../../img/catalog/gift-bg.svg");
+  background-image: url("../img/catalog/gift-bg.svg");
   background-repeat: no-repeat;
   background-position: center;
+  list-style-type: none;
+  margin: 34px 20px 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: center;
+    margin: 69px 30px 76px;
+    background-color: #68b738d9;
+    background-image: url("../img/catalog/gift-bg-tablet.png");
+    min-height: 200px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    background-color: #68b738d9;
+    background-image: url("../img/catalog/gift-bg-desktop.png");
+    min-height: 289px;
+  }
 }
 
 .gift__description {
@@ -14,6 +37,46 @@
   color: #ffffff;
   padding: 187px 61px 43px 58px;
   margin: 0;
-  margin-top: 35px;
   text-align: center;
+  max-width: 280px;
+  box-sizing: border-box;
+
+  &::before {
+    position: absolute;
+    top: 59px;
+    left: 0;
+    right: 0;
+    width: 78px;
+    height: 80px;
+    margin: auto;
+    background-image: url("../img/catalog/icon_gift.svg");
+    content: "";
+  }
+
+  @media (min-width: @tablet-width) {
+    text-align: left;
+    padding: 71px 124px 69px 422px;
+    margin-top: 0;
+    max-width: 707px;
+
+    &::before {
+      top: 58px;
+      left: 79px;
+      right: unset;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: center;
+    padding: 185px 43px 42px 40px;
+
+    &::before {
+      top: 56px;
+      left: 0;
+      right: 0;
+      width: 78px;
+      height: 80px;
+      margin: auto;
+    }
+  }
 }
