--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -1,7 +1,7 @@
 .page-catalog {
   display: flex;
   flex-direction: column;
-  width: 320px;
+  min-width: 320px;
 }
 
 .page-catalog__page-title {
@@ -10,23 +10,20 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  padding: 27px 42px 41px 20px;
+  padding: 27px 42px 40px 20px;
   margin: 0;
-  border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
-}
 
-.page-catalog__show-all {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 25px 20px;
-  border-bottom: 1px solid #d9d9d9;
-}
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    border-bottom: none;
+    padding: 65px 30px 82px;
+  }
 
-.page-catalog__link {
-  text-decoration: none;
-  color: #111111;
+  @media (min-width: @desktop-width) {
+    padding: 45px 110px 84px;
+  }
 }
 
 .page-catalog__title {
@@ -38,29 +35,4 @@
   text-transform: uppercase;
   padding: 53px 37px 0;
   margin: 0 0 8px;
-}
-
-.page-catalog__subtitle {
-  font-family: "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
-  color: #444444;
-  margin: 0 0 21px;
-}
-
-.page-catalog__show-button {
-  font-family: "Oswald", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  color: #444444;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
-  background-color: #f2f2f2;
-  align-self: center;
-  padding: 10px 94px;
 }
