--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,16 +7,19 @@
   margin: 0 auto;
   box-sizing: border-box;
 
+  @media (max-width: @mobile-width-only) {
+    border-bottom: 1px solid #d9d9d9;
+  }
+
   @media (min-width: @tablet-width) {
     align-items: end;
-    flex-wrap: nowrap;
     padding: 0 30px;
     min-height: 76px;
     max-width: 768px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 46px 110px 29px;
+    padding: 47px 110px 30px;
     max-width: 1440px;
   }
 }
