--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,7 +12,7 @@
 @import "blocks/page-main.less";
 @import "blocks/produsct-set.less";
 @import "blocks/page-form.less";
-@import "blocks/additionally-wrapper.less";
+@import "blocks/additionally.less";
 @import "blocks/gift.less";
 @import "blocks/page-catalog.less";
 @import "blocks/product-card.less";
