--- a/source/less/blocks/additionally.less
+++ b/source/less/blocks/additionally.less
@@ -34,7 +34,9 @@
   @media (min-width: @desktop-width) {
     display: flex;
     padding: 0 110px;
-    margin-bottom: 86px;
+    margin: 0 auto 86px;
+    max-width: 1440px;
+    box-sizing: border-box;
   }
 }
 
@@ -115,6 +117,11 @@
     padding: 0 36px 0 40px;
     margin: 0 0 81px 70px;
   }
+}
+
+.additionally__title-wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .additionally__card-title {
