--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -23,6 +23,9 @@
 
   @media (min-width: @desktop-width) {
     padding: 45px 110px 84px;
+    margin: 0 auto;
+    max-width: 1440px;
+    box-sizing: border-box;
   }
 }
 
