--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -4,6 +4,7 @@
   position: relative;
   background-color: #68b738d9;
   background-image: url("../img/catalog/gift-bg.svg");
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   list-style-type: none;
@@ -15,6 +16,7 @@
     margin: 69px 30px 76px;
     background-color: #68b738d9;
     background-image: url("../img/catalog/gift-bg-tablet.png");
+    background-size: cover;
     min-height: 200px;
   }
 
@@ -35,6 +37,7 @@
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
+  position: relative;
   padding: 187px 61px 43px 58px;
   margin: 0;
   text-align: center;
