--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -7,6 +7,14 @@
   }
 }
 
+.location-inner {
+  background-color: #f2f2f2;
+
+  @media (min-width: @desktop-width) {
+    background-color: #ffffff;
+  }
+}
+
 .location__address {
   display: flex;
   justify-content: space-between;
@@ -99,8 +107,9 @@
 }
 
 .location__map {
+  width: 100%;
+
   @media (min-width: @tablet-width) {
-    width: 100%;
     height: 400px;
   }
 }
