--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -26,6 +26,7 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 60px;
     padding: 0 30px;
   }
@@ -34,6 +35,9 @@
     column-gap: 80px;
     row-gap: 63px;
     padding: 0 110px;
+    margin: 0 auto;
+    max-width: 1440px;
+    box-sizing: border-box;
   }
 }
 
