--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -18,6 +18,10 @@
     background-image: url("../img/catalog/gift-bg-tablet.png");
     background-size: cover;
     min-height: 200px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/gift-bg-tablet@2x.png");
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -27,6 +31,10 @@
     background-color: #68b738d9;
     background-image: url("../img/catalog/gift-bg-desktop.png");
     min-height: 289px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/gift-bg-desktop@2x.png");
+    }
   }
 }
 
