--- a/source/less/blocks/main-example.less
+++ b/source/less/blocks/main-example.less
@@ -269,11 +269,13 @@
   margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
-    content: url("../img/image_cat_tablet.png");
-    width: 592px;
-    height: 511px;
     position: absolute;
     top: -170px;
+    right: 0;
+    left: 0;
+    margin: auto;
+    width: 592px;
+    height: 511px;
   }
 
   @media (min-width: @desktop-width) {
