--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -69,6 +69,14 @@
   }
 }
 
+.location__container {
+  @media (min-width: @desktop-width) {
+    position: relative;
+    min-width: 1440px;
+    margin: 0 auto;
+  }
+}
+
 .location__text-container {
   display: flex;
   flex-direction: column;
