--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -135,6 +135,10 @@
       background-image: url("../img/index-background-desktop.png");
       background-repeat: no-repeat;
       content: "";
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/index-background-desktop@2x.png")
+      }
     }
 
     &::after {
