Декоративные элементы внутренних страниц

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -137,7 +137,7 @@
       content: "";
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../img/index-background-desktop@2x.png")
+        background-image: url("../img/index-background-desktop@2x.png");
       }
     }
 
