--- a/source/less/blocks/main-logo.less
+++ b/source/less/blocks/main-logo.less
@@ -42,7 +42,7 @@
   padding: 27px 35px 164px;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../img/retina/main-bg@2.png");
+    background-image: url("../img/main-bg@2x.png");
     background-size: 320px auto;
   }
 
