--- a/source/less/blocks/main-logo.less
+++ b/source/less/blocks/main-logo.less
@@ -23,7 +23,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 82px 110px 321px;
+    padding: 80px 110px 321px;
     width: 100%;
     max-width: 1440px;
     box-sizing: border-box;
@@ -39,7 +39,7 @@
   background-size: 320px auto;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 27px 35px 164px;
+  padding: 27px 35px 162px;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/main-bg@2x.png");
@@ -113,6 +113,7 @@
 }
 
 .main-logo__image {
+  display: block;
   position: absolute;
   top: 55%;
   left: 0;
