--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -125,6 +125,7 @@
 }
 
 .location__map-container {
+  height: 362px;
   background-image: url("../img/location-map.png");
   background-size: cover;
   background-position: center;
@@ -135,6 +136,7 @@
   }
 
   @media (min-width: @tablet-width) {
+    height: 400px;
     background-image: url("../img/location-map-tablet.png");
 
     @media (min-resolution: 2dppx) {
