--- a/source/less/blocks/main-example.less
+++ b/source/less/blocks/main-example.less
@@ -259,7 +259,7 @@
 
   @media (min-width: @desktop-width) {
     justify-content: space-between;
-    padding: 360px 103px 70px 84px;
+    padding: 360px 85px 70px 84px;
     width: 616px;
     margin-right: auto;
   }
@@ -323,13 +323,14 @@
     position: absolute;
     width: 651px;
     left: 0;
-    height: 512px;
+    height: auto;
   }
 }
 
 .main-example__range-slider {
   display: flex;
   align-items: center;
+  width: 592px;
 }
 
 .main-example__button {
