правки на допуск

--- a/source/less/blocks/additionally.less
+++ b/source/less/blocks/additionally.less
@@ -95,7 +95,7 @@
 }
 
 .additionally__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -125,7 +125,7 @@
 }
 
 .additionally__card-title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -186,7 +186,7 @@
 
 .additionally__amount,
 .additionally__price {
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -201,7 +201,7 @@
 }
 
 .additionally__button {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -214,6 +214,14 @@
   background-color: @green;
   align-self: center;
   padding: 10px 109px;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 
   @media (min-width: @tablet-width) {
     width: 100%;
