--- a/source/less/blocks/main-descriptions.less
+++ b/source/less/blocks/main-descriptions.less
@@ -22,7 +22,7 @@
 }
 
 .main-descriptions__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -58,7 +58,7 @@
 
 .main-descriptions__item {
   position: relative;
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -218,7 +218,7 @@
   @media (min-width: @tablet-width) {
     display: block;
     position: absolute;
-    font-family: "Oswald", sans-serif;
+    font-family: "Oswald", "Tahoma", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 280px;
