--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -61,7 +61,7 @@
 }
 
 .page-footer__academy-link {
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -76,7 +76,7 @@
 
   @media (min-width: @tablet-width) {
     margin-right: 22px;
-    width: 114px;
+    width: 115px;
   }
 }
 
