--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -39,7 +39,7 @@
 }
 
 .gift__description {
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
