--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -7,7 +7,7 @@
   }
 }
 
-.location-inner {
+.location--inner {
   background-color: #f2f2f2;
 
   @media (min-width: @desktop-width) {
@@ -43,7 +43,7 @@
 }
 
 .location__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -94,7 +94,7 @@
 }
 
 .location__text {
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
