--- a/source/less/blocks/main-logo.less
+++ b/source/less/blocks/main-logo.less
@@ -18,12 +18,13 @@
 
   @media (min-width: @tablet-width) {
     align-items: flex-start;
-    padding: 64px 30px 0;
+    padding: 64px 30px 526px;
     margin: 0 auto;
+    min-width: 533px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 80px 110px 321px;
+    padding: 80px 110px 267px;
     width: 100%;
     max-width: 1440px;
     box-sizing: border-box;
@@ -55,7 +56,7 @@
 }
 
 .main-logo__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -65,6 +66,7 @@
   padding: 0;
   margin: 0;
   margin-bottom: 25px;
+  word-break: break-all;
 
   @media (max-width: @mobile-width-only) {
     min-height: 72px;
@@ -76,7 +78,6 @@
     color: #000000;
     text-align: left;
     width: 414px;
-    padding-left: 87px;
     margin-bottom: 41px;
   }
 
@@ -87,7 +88,7 @@
 }
 
 .main-logo__subtitle {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -96,14 +97,15 @@
   text-transform: uppercase;
   padding: 0;
   margin: 0;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
     color: #000000;
     text-align: left;
-    padding-left: 89px;
     margin-bottom: 20px;
+    width: 414px;
   }
 
   @media (min-width: @desktop-width) {
@@ -115,7 +117,7 @@
 .main-logo__image {
   display: block;
   position: absolute;
-  top: 55%;
+  bottom: -45%;
   left: 0;
   right: 0;
   margin: auto;
@@ -126,9 +128,11 @@
   }
 
   @media (min-width: @tablet-width) {
-    position: static;
     width: 709px;
     height: 609px;
+    top: 201px;
+    left: -89px;
+    bottom: unset;
   }
 
   @media (min-width: @desktop-width) {
@@ -141,7 +145,7 @@
 }
 
 .main-logo__button {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -167,17 +171,14 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
-    position: absolute;
-    top: 294px;
-    left: 120px;
     padding: 17px 26px;
-    margin: 0;
+    margin: 29px 0 0 2px;
     width: 244px;
     box-sizing: border-box;
   }
 
   @media (min-width: @desktop-width) {
-    left: 190px;
-    top: 314px;
+    margin-left: 80px;
+    margin-top: unset;
   }
 }
