--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -103,7 +103,7 @@
 .main-nav__list {
   flex-direction: column;
   align-items: center;
-
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -138,6 +138,7 @@
 
       @media (min-resolution: 2dppx) {
         background-image: url("../img/index-background-desktop@2x.png");
+        background-size: cover;
       }
     }
 
@@ -168,7 +169,8 @@
     padding: 0 0 10px;
     margin-left: 36px;
     border: none;
-    white-space: nowrap;
+    word-break: break-all;
+    max-width: 175px;
 
     &:last-child {
       border-bottom: none;
@@ -187,8 +189,8 @@
   @media (min-width: @tablet-width) {
     &::before {
       position: absolute;
-      top: 32px;
-      left: 1px;
+      bottom: 0;
+      left: 0;
       width: 100%;
       height: 2px;
       background-color: @green;
@@ -199,7 +201,7 @@
   @media (min-width: @desktop-width) {
     &::before {
       background-color: #ffffff;
-      top: 35px;
+      bottom: 6px;
     }
   }
 }
@@ -210,8 +212,8 @@
   @media (min-width: @tablet-width) {
     &::before {
       position: absolute;
-      top: 32px;
-      left: 1px;
+      bottom: 2px;
+      left: 0;
       width: 100%;
       height: 2px;
       background-color: @green;
@@ -221,13 +223,13 @@
 
   @media (min-width: @desktop-width) {
     &::before {
-      top: 35px;
+      bottom: 6px;
     }
   }
 }
 
 .main-nav__item a {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
