--- a/source/less/blocks/produsct-set.less
+++ b/source/less/blocks/produsct-set.less
@@ -130,7 +130,7 @@
 
 .product-set__title {
   position: relative;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -187,7 +187,7 @@
 }
 
 .product-set__description {
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -216,7 +216,7 @@
 
 .product-set__link {
   position: relative;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -225,12 +225,11 @@
   color: #000000;
   text-decoration: none;
   padding-right: 47px;
-  margin-top: 15px;
-  width: 134px;
+  display: inline-block;
 
   &::before {
     position: absolute;
-    top: 11px;
+    top: 6px;
     right: 14px;
     width: 18px;
     height: 2px;
@@ -240,8 +239,8 @@
 
   &::after {
     position: absolute;
-    top: 7px;
-    right: 8px;
+    top: 2px;
+    right: 7px;
     width: 0;
     height: 0;
     border-top: 5px solid transparent;
@@ -268,14 +267,15 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    padding: 4px 57px 4px 0;
+    padding-right: 57px;
 
     &::before {
-      top: 18px;
+      top: 14px;
     }
 
     &::after {
-      top: 14px;
+      top: 10px;
+      right: 7px;
     }
 
     &:hover::before {
@@ -285,6 +285,18 @@
 
     &:hover::after {
       right: 0;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      top: 13px;
+      right: 12px;
+    }
+
+    &::after {
+      top: 9px;
+      right: 5px;
     }
   }
 }
