--- a/source/less/blocks/social-container.less
+++ b/source/less/blocks/social-container.less
@@ -13,6 +13,7 @@
 
 .social-container__list {
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
   margin: 0;
   padding: 0;
@@ -64,7 +65,7 @@
   margin-right: 36px;
 
   @media (min-width: @tablet-width) {
-    margin: 0;
+    margin-right: 25px;
   }
 
   &:last-child {
