--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -49,10 +49,11 @@
 
 .main-nav--nojs .main-nav__wrapper {
   display: block;
-  width: 100%;
+
 
   @media (max-width: @mobile-width-only) {
     position: static;
+    width: auto;
   }
 }
 
@@ -119,6 +120,10 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+  }
+
+  @media (min-width: @desktop-width) {
+    max-width: 610px;
   }
 }
 
