--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -285,6 +285,11 @@
 
   @media (min-width: @tablet-width) {
     padding: 30px 28px 28px;
+    border: 1px solid #e7e7e7;
+  }
+
+  @media (min-width: @desktop-width) {
+    border: none;
   }
 }
 
@@ -376,7 +381,7 @@
 
   &:focus {
     + .page-form__control-mark {
-      border-color: #bababa;
+      outline: 2px solid #222222;
     }
   }
 
