--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -2,11 +2,9 @@
   padding: 0 20px;
 
   @media (min-width: @tablet-width) {
-    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    background-color: #f2f2f2;
     padding: 161px 38px 39px;
     width: 324px;
     min-height: 430px;
@@ -27,14 +25,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 60px;
-    padding: 0 30px;
+    column-gap: 60px;
+    row-gap: 141px;
+    padding: 81px 30px 0;
   }
 
   @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     column-gap: 80px;
-    row-gap: 63px;
-    padding: 0 110px;
+    row-gap: 141px;
+    padding: 79px 110px 0;
     margin: 0 auto;
     max-width: 1440px;
     box-sizing: border-box;
@@ -46,12 +47,14 @@
   border-bottom: 1px solid #ebebeb;
 
   @media (min-width: @tablet-width) {
+    position: relative;
     display: flex;
     align-items: flex-end;
     padding: 0;
     max-width: 324px;
-    min-height: 511px;
+    min-height: 430px;
     border: none;
+    background-color: #f2f2f2;
   }
 
   @media (min-width: @desktop-width) {
@@ -94,7 +97,7 @@
   @media (min-width: @desktop-width) {
     position: absolute;
     top: -79px;
-    left: 0;
+    left: 2px;
     right: 0;
   }
 }
